# tadqeek_sakhr

./: .gitignore  README.md  pyproject.toml  requirements.txt  tadqeek_alsharekh_org.spec  tadqeek_sakhr.py  tadqeek_sakhr.spec
.github/workflows/: ci.yml
pyinstaller/: requirements.txt  tadqeek_sakhr.spec
