[tool.poetry]
name = "tadqeek_sakhr"
version = "0.1.0"
description = "A mini command line tool to spellcheck text files using tadqeek.alsharekh.org"
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = {extras = ["http2"], version = "^0.23.0"}

[tool.poetry.dev-dependencies]
black = "^22.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
