[tool.poetry]
authors = ["yshalsager <ysh-alsager@hotmail.com>"]
description = "A mini command line tool to spellcheck text files using tadqeek.alsharekh.org"
name = "tadqeek_sakhr"
version = "0.1.1"

[tool.poetry.dependencies]
httpx = {extras = ["http2"], version = "^0.27.0"}
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.12"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
